SC.WorkspaceView: fix topToolbar & bottomToolbar z-index
See https://github.com/sproutcore/sproutcore/issues/1033

--- a/themes/ace/resources/picker/popover/popover.css
+++ b/themes/ace/resources/picker/popover/popover.css
@@ -10,6 +10,7 @@
     border-bottom: 0 none;
     -webkit-box-shadow: none;
     -moz-box-shadow: none;
+    z-index: 10;
   }
 
   $theme.workspace {
